Fixed footer padding which gave white space below

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,7 +209,7 @@ footer {
 
 #left-footer li {
     display: inline;
-    padding: 10%;
+    padding: 10% 10% 0 10%;
 }
 
 #left-footer i {
